<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    >

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/textView"
            style="@style/HeaderTextStyle"
            android:text="@string/Topping"
         />

        <CheckBox
            android:id="@+id/checkBox_whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whippedCream"
            style="@style/HeaderTextStyle"
            android:layout_marginTop="8dp" />

        <CheckBox
            android:id="@+id/checkBox_chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/Quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quantity"
            style="@style/HeaderTextStyle"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/quantity_minus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                android:onClick="decrement"
                />

            <TextView
                android:id="@+id/quantity_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/zero"
                android:textColor="#000000"
                style="@style/HeaderTextStyle" />

            <Button
                android:id="@+id/quantity_plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:onClick="increment" />
        </LinearLayout>

        <TextView
            android:id="@+id/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Price"
            style="@style/HeaderTextStyle"
            android:padding="16dp"
            />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringForcost"
            android:textColor="#000000"
            style="@style/HeaderTextStyle"
            android:padding="16dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Order"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>